新增頁面與調整選單動畫

--- a/case.html
+++ b/case.html
@@ -43,7 +43,7 @@
                             <div class="col-12 col-md-6 col-lg-4">
                                 <figure class="card card_vv">
                                     <div class="card_img">
-                                        <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                        <img src="./assets/uploads/pic001.png"
                                             alt="">
                                     </div>
                                     <div class="card-body">
@@ -57,7 +57,7 @@
                             <div class="col-12 col-md-6 col-lg-4">
                                 <figure class="card card_vv">
                                     <div class="card_img">
-                                        <img src="https://gd-dev.starworldtech.com.tw/gdSystemHub/gdweb/file/img/6e0bb966-12d6-48d4-a2ce-d2fc4e0f4277"
+                                        <img src="./assets/uploads/pic001.png"
                                             alt="">
                                     </div>
                                     <div class="card-body">
@@ -71,7 +71,7 @@
                             <div class="col-12 col-md-6 col-lg-4">
                                 <figure class="card card_vv">
                                     <div class="card_img">
-                                        <img src="https://gd-dev.starworldtech.com.tw/gdSystemHub/gdweb/file/img/abdcee26-f2ac-418c-b798-9b6fb5cfd24c"
+                                        <img src="./assets/uploads/pic001.png"
                                             alt="">
                                     </div>
                                     <div class="card-body">
@@ -85,7 +85,7 @@
                             <div class="col-12 col-md-6 col-lg-4">
                                 <figure class="card card_vv">
                                     <div class="card_img">
-                                        <img src="https://gd-dev.starworldtech.com.tw/gdSystemHub/gdweb/file/img/08a5b6b5-c048-4138-9ad3-00ed314e0618"
+                                        <img src="./assets/uploads/pic001.png"
                                             alt="">
                                     </div>
                                     <div class="card-body">
@@ -98,7 +98,7 @@
                             <div class="col-12 col-md-6 col-lg-4">
                                 <figure class="card card_vv">
                                     <div class="card_img">
-                                        <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                        <img src="./assets/uploads/pic001.png"
                                             alt="">
                                     </div>
                                     <div class="card-body">
@@ -112,7 +112,7 @@
                             <div class="col-12 col-md-6 col-lg-4">
                                 <figure class="card card_vv">
                                     <div class="card_img">
-                                        <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                        <img src="./assets/uploads/pic001.png"
                                             alt="">
                                     </div>
                                     <div class="card-body">
@@ -126,7 +126,7 @@
                             <div class="col-12 col-md-6 col-lg-4">
                                 <figure class="card card_vv">
                                     <div class="card_img">
-                                        <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                        <img src="./assets/uploads/pic001.png"
                                             alt="">
                                     </div>
                                     <div class="card-body">
@@ -140,7 +140,7 @@
                             <div class="col-12 col-md-6 col-lg-4">
                                 <figure class="card card_vv">
                                     <div class="card_img">
-                                        <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                        <img src="./assets/uploads/pic001.png"
                                             alt="">
                                     </div>
                                     <div class="card-body">
@@ -154,7 +154,7 @@
                             <div class="col-12 col-md-6 col-lg-4">
                                 <figure class="card card_vv">
                                     <div class="card_img">
-                                        <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                        <img src="./assets/uploads/pic001.png"
                                             alt="">
                                     </div>
                                     <div class="card-body">
