--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         <figure class="card card_vv">
                             <a href="normal_article.html">
                                 <div class="card_img">
-                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                    <img src="./assets/uploads/pic001.png"
                                         alt="">
                                 </div>
                                 <div class="card-body">
@@ -165,7 +165,7 @@
                         <figure class="card card_vv">
                             <a href="normal_article.html">
                                 <div class="card_img">
-                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                    <img src="./assets/uploads/pic001.png"
                                         alt="">
                                 </div>
                                 <div class="card-body">
@@ -185,7 +185,7 @@
                         <figure class="card card_vv">
                             <a href="normal_article.html">
                                 <div class="card_img">
-                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                    <img src="./assets/uploads/pic001.png"
                                         alt="">
                                 </div>
                                 <div class="card-body">
@@ -284,11 +284,13 @@
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 information_banner wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".8s">
 
-                    <a href="" class=""><img src="https://gd.taiwantrade.com/uploads/show_img1/6710d62524f11.jpg" alt=""
+                    <a href="" class=""><img src="./assets/uploads/bn001.png" alt=""
                             class="img-fluid my-1"></a>
-                    <a href=""> <img src="https://gd.taiwantrade.com/uploads/show_img2/6710d7012eeb7.jpg" alt=""
+                    <a href=""> <img src="./assets/uploads/bn001.png" alt=""
                             class="img-fluid my-2"></a>
-                    <a href="" ><img src="https://gd.taiwantrade.com/uploads/show_img3/6710d88680bc3.png" alt=""
+                    <a href="" ><img src="./assets/uploads/bn001.png" alt=""
+                            class="img-fluid my-1"></a>
+                    <a href="" ><img src="./assets/uploads/bn001.png" alt=""
                             class="img-fluid my-1"></a>
                     </div>
                 </div>
@@ -322,7 +324,7 @@
                         <figure class="card card_vv">
                             <a href="normal_article.html">
                                 <div class="card_img">
-                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                    <img src="./assets/uploads/pic001.png"
                                         alt="">
                                 </div>
                                 <div class="card-body">
@@ -333,7 +335,7 @@
                         <figure class="card card_vv">
                             <a href="normal_article.html">
                                 <div class="card_img">
-                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                    <img src="./assets/uploads/pic001.png"
                                         alt="">
                                 </div>
                                 <div class="card-body">
@@ -344,7 +346,7 @@
                         <figure class="card card_vv">
                             <a href="normal_article.html">
                                 <div class="card_img">
-                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                    <img src="./assets/uploads/pic001.png"
                                         alt="">
                                 </div>
                                 <div class="card-body">
@@ -355,7 +357,7 @@
                         <figure class="card card_vv">
                             <a href="normal_article.html">
                                 <div class="card_img">
-                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                    <img src="./assets/uploads/pic001.png"
                                         alt="">
                                 </div>
                                 <div class="card-body">
@@ -366,7 +368,7 @@
                         <figure class="card card_vv">
                             <a href="normal_article.html">
                                 <div class="card_img">
-                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                    <img src="./assets/uploads/pic001.png"
                                         alt="">
                                 </div>
                                 <div class="card-body">
