--- a/news.html
+++ b/news.html
@@ -53,39 +53,34 @@
                                         <li><a href="news_new.html"><span>最新文章</span></a></li>
                                         <li><a href="news_all.html"><span>分類文章</span></a>
                                             <ul>
-                                                <li><a href="news_all.html">・跨境電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
                                             </ul>
                                         </li>
                                     </ul>
@@ -100,7 +95,7 @@
                                             <figure class="card card_hh">
                                                 <div class="card_img">
                                                     <span class="rank">1</span>
-                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                                    <img src="./assets/uploads/pic001.png"
                                                         alt="">
                                                     </div>
                                                 <div class="card-body">
@@ -115,7 +110,7 @@
                                             <figure class="card card_hh">
                                                 <span class="rank">2</span>
                                                 <div class="card_img">
-                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                                    <img src="./assets/uploads/pic001.png"
                                                         alt="">
                                                     </div>
                                                 <div class="card-body">
@@ -130,7 +125,7 @@
                                             <figure class="card card_hh">
                                                 <span class="rank">3</span>
                                                 <div class="card_img">
-                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                                    <img src="./assets/uploads/pic001.png"
                                                         alt="">
                                                     </div>
                                                 <div class="card-body">
@@ -145,7 +140,7 @@
                                             <figure class="card card_hh">
                                                 <span class="rank">4</span>
                                                 <div class="card_img">
-                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                                    <img src="./assets/uploads/pic001.png"
                                                         alt="">
                                                     </div>
                                                 <div class="card-body">
@@ -160,7 +155,7 @@
                                             <figure class="card card_hh">
                                                 <span class="rank">5</span>
                                                 <div class="card_img">
-                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                                    <img src="./assets/uploads/pic001.png"
                                                         alt="">
                                                     </div>
                                                 <div class="card-body">
@@ -189,9 +184,29 @@
     <footer></footer>
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <script>
-        $('.navTitle').on('click',function(){
-            $(this).siblings('ul').slideToggle(300);
-        })
+
+        function setupMobileNav() {
+            if (window.matchMedia('(max-width: 767px)').matches) {
+                $('.navTitle').siblings('ul').hide();
+                //點擊『文章分類』LIST會打開或收合
+                $('.navTitle').off('click').on('click', function () {
+                    $(this).siblings('ul').slideToggle(300);
+                    $(this).toggleClass('rotate180');
+                });
+            } else {
+                // 移除事件，避免影響大螢幕
+                $('.navTitle, .pageNav ul li, .pageNav>ul>li>ul>li').off('click');
+                $('.pageNav ul').show();
+            }
+        }
+
+        // 初次執行
+        setupMobileNav();
+
+        // 監聽媒體變化
+        window.matchMedia('(max-width: 767px)').addEventListener('change', setupMobileNav);
+        
+
         $("header").load("./layout/header.html");
         $("footer").load("./layout/footer.html");
     </script>
