--- a/news_article.html
+++ b/news_article.html
@@ -40,7 +40,7 @@
                                 <div class="infoList newsList">
                                     <!-- 文章內容 -->
                                     <div class="article_con">
-                                        <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240808/66b48cc0c2dfd.jpg"
+                                        <img src="./assets/uploads/pic001.png"
                                             alt="">
                                         <br>
                                         <br>
@@ -77,9 +77,9 @@
                                     <h5>作者</h5>
                                     <div class="author">
                                         <span class="pic"><img
-                                                src="https://gd.taiwantrade.com/uploads/author_img/66b48d555c873.png"
+                                                src="./assets/uploads/article_logo.png"
                                                 alt=""></span>
-                                        <span class="name">台灣經貿網</span>
+                                        <span class="name">DATE SUMMIT 數位商務大趨勢│國際匯壇</span>
                                     </div>
                                     <p>
                                         台灣經貿網(www.taiwantrade.com)成立於2002年，目前台灣經貿網為臺灣最大之B2B產品資料庫，為臺灣中小企業運用電商拓展海外市場的重要管道。因應買主採購趨勢的改變，2012年台灣經貿網推出「買賣旺」(www.idealez.com)線上樣品販售服務，串連金物流發貨全世界。目前網站每年瀏覽人次約3,200萬，是海外買主尋找優質臺灣產品或供應商的首選B2B平臺。
@@ -96,7 +96,7 @@
                                              <a href="news_article.html">
                                                  <figure>
                                                     <div class="pic">
-                                                        <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg" alt="">
+                                                        <img src="./assets/uploads/pic001.png" alt="">
                                                     </div>
                                                     <figcaption class="text">
                                                         <h5>台灣經貿網前進德國科隆五金展 為我商搶攻全球商機</h5>
@@ -109,7 +109,7 @@
                                             <a href="news_article.html">
                                                 <figure>
                                                    <div class="pic">
-                                                       <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg" alt="">
+                                                       <img src="./assets/uploads/pic001.png" alt="">
                                                    </div>
                                                    <figcaption class="text">
                                                        <h5>台灣經貿網前進德國科隆五金展 為我商搶攻全球商機</h5>
@@ -121,7 +121,7 @@
                                            <a href="news_article.html">
                                                <figure>
                                                   <div class="pic">
-                                                      <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg" alt="">
+                                                      <img src="./assets/uploads/pic001.png" alt="">
                                                   </div>
                                                   <figcaption class="text">
                                                       <h5>台灣經貿網前進德國科隆五金展 為我商搶攻全球商機</h5>
@@ -133,7 +133,7 @@
                                           <a href="news_article.html">
                                               <figure>
                                                  <div class="pic">
-                                                     <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg" alt="">
+                                                     <img src="./assets/uploads/pic001.png" alt="">
                                                  </div>
                                                  <figcaption class="text">
                                                      <h5>台灣經貿網前進德國科隆五金展 為我商搶攻全球商機</h5>
@@ -145,7 +145,7 @@
                                          <a href="news_article.html">
                                              <figure>
                                                 <div class="pic">
-                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg" alt="">
+                                                    <img src="./assets/uploads/pic001.png" alt="">
                                                 </div>
                                                 <figcaption class="text">
                                                     <h5>台灣經貿網前進德國科隆五金展 為我商搶攻全球商機</h5>
