--- a/normal_article.html
+++ b/normal_article.html
@@ -40,7 +40,8 @@
                                 <div class="infoList newsList">
                                     <!-- 文章內容 -->
                                      <div class="article_con">
-<img src="https://gd.taiwantrade.com/uploads/img/redactor/20240808/66b48cc0c2dfd.jpg" alt="">
+                                        <img src="./assets/uploads/pic001.png"
+                                        alt="">
 <br>
 <br>
 <p>ChatGPT的問世轟動全球，讓生成式AI迅速商業化，不論在金融、製造、流通業皆有生成式AI之實證實驗，且已被廣泛應用，不管在文章、圖片、視頻與程式都有它的存在。因此也被視為擴大事業，擺脫無數競爭對手之強大武器。
