--- a/news_all.html
+++ b/news_all.html
@@ -53,39 +53,61 @@
                                         <li><a href="news_new.html"><span>最新文章</span></a></li>
                                         <li><a href="news_all.html" class="active"><span>分類文章</span></a>
                                             <ul>
-                                                <li><a href="news_all.html">・跨境電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
+                                                <li><a href="#">・<span>測試按鈕1</span></a></li>
                                             </ul>
                                         </li>
                                     </ul>
@@ -100,7 +122,7 @@
                                         <div class="col-12 col-md-6 col-lg-4">
                                             <figure class="card card_vv">
                                                 <div class="card_img">
-                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                                    <img src="./assets/uploads/pic001.png"
                                                         alt="">
                                                 </div>
                                                 <div class="card-body">
@@ -114,7 +136,7 @@
                                         <div class="col-12 col-md-6 col-lg-4">
                                             <figure class="card card_vv">
                                                 <div class="card_img">
-                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                                    <img src="./assets/uploads/pic001.png"
                                                         alt="">
                                                 </div>
                                                 <div class="card-body">
@@ -128,7 +150,7 @@
                                         <div class="col-12 col-md-6 col-lg-4">
                                             <figure class="card card_vv">
                                                 <div class="card_img">
-                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                                    <img src="./assets/uploads/pic001.png"
                                                         alt="">
                                                 </div>
                                                 <div class="card-body">
@@ -142,7 +164,7 @@
                                         <div class="col-12 col-md-6 col-lg-4">
                                             <figure class="card card_vv">
                                                 <div class="card_img">
-                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                                    <img src="./assets/uploads/pic001.png"
                                                         alt="">
                                                 </div>
                                                 <div class="card-body">
@@ -156,7 +178,7 @@
                                         <div class="col-12 col-md-6 col-lg-4">
                                             <figure class="card card_vv">
                                                 <div class="card_img">
-                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                                    <img src="./assets/uploads/pic001.png"
                                                         alt="">
                                                 </div>
                                                 <div class="card-body">
@@ -170,7 +192,7 @@
                                         <div class="col-12 col-md-6 col-lg-4">
                                             <figure class="card card_vv">
                                                 <div class="card_img">
-                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                                    <img src="./assets/uploads/pic001.png"
                                                         alt="">
                                                 </div>
                                                 <div class="card-body">
@@ -184,7 +206,7 @@
                                         <div class="col-12 col-md-6 col-lg-4">
                                             <figure class="card card_vv">
                                                 <div class="card_img">
-                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                                    <img src="./assets/uploads/pic001.png"
                                                         alt="">
                                                 </div>
                                                 <div class="card-body">
@@ -198,7 +220,7 @@
                                         <div class="col-12 col-md-6 col-lg-4">
                                             <figure class="card card_vv">
                                                 <div class="card_img">
-                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                                    <img src="./assets/uploads/pic001.png"
                                                         alt="">
                                                 </div>
                                                 <div class="card-body">
@@ -212,7 +234,7 @@
                                         <div class="col-12 col-md-6 col-lg-4">
                                             <figure class="card card_vv">
                                                 <div class="card_img">
-                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                                    <img src="./assets/uploads/pic001.png"
                                                         alt="">
                                                 </div>
                                                 <div class="card-body">
@@ -286,17 +308,46 @@
     <footer></footer>
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <script>
-        $('.navTitle').on('click',function(){
-            $(this).siblings('ul').slideToggle(300);
-        })
 
+        //點擊『分類文章子項目』，捲軸會滑到最上方
         $('.pageNav>ul>li>ul>li').on('click', function () {
             $('html,body').animate({
                 scrollTop: 0
             }, 1);
             return false;
         });
+        function setupMobileNav() {
+            if (window.matchMedia('(max-width: 767px)').matches) {
+                $('.navTitle').siblings('ul').hide();
+                //點擊『文章分類』LIST會打開或收合
+                $('.navTitle').off('click').on('click', function () {
+                    $(this).siblings('ul').slideToggle(300);
+                    $(this).toggleClass('rotate180');
+                });
+                //點擊LIST每一個項目 LIST會收合(主要針對手機版，點擊子項目沒有收合的問題)
+                $('.pageNav>ul>li>ul>li').off('click').on('click', function () {
+                    $('.pageNav > ul').slideToggle(300);
+                    $('.navTitle').toggleClass('rotate180');
+                    $('html,body').animate({
+                        scrollTop: 0
+                    }, 1);
+                    return false;
+                });
+            } else {
+                // 移除事件，避免影響大螢幕
+                $('.navTitle, .pageNav ul li, .pageNav>ul>li>ul>li').off('click');
+                $('.pageNav ul').show();
+                
+            }
+        }
+
+        // 初次執行
+        setupMobileNav();
+
+        // 監聽媒體變化
+        window.matchMedia('(max-width: 767px)').addEventListener('change', setupMobileNav);
         
+
         $("header").load("./layout/header.html");
         $("footer").load("./layout/footer.html");
     </script>
