--- a/news_new.html
+++ b/news_new.html
@@ -52,40 +52,36 @@
                                         <li><a href="news.html"><span>熱門文章</span></a></li>
                                         <li><a href="news_new.html" class="active"><span>最新文章</span></a></li>
                                         <li><a href="news_all.html"><span>分類文章</span></a>
+                                            
                                             <ul>
-                                                <li><a href="news_all.html">・跨境電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
-                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
+                                                <li><a href="news_all.html">・<span>連到分類文章子頁面</span></a></li>
                                             </ul>
                                         </li>
                                     </ul>
@@ -99,7 +95,7 @@
                                         <div class="col-12">
                                             <figure class="card card_hh">
                                                 <div class="card_img">
-                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                                    <img src="./assets/uploads/pic001.png"
                                                         alt="">
                                                     </div>
                                                 <div class="card-body">
@@ -113,7 +109,7 @@
                                         <div class="col-12">
                                             <figure class="card card_hh">
                                                 <div class="card_img">
-                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                                    <img src="./assets/uploads/pic001.png"
                                                         alt="">
                                                     </div>
                                                 <div class="card-body">
@@ -127,7 +123,7 @@
                                         <div class="col-12">
                                             <figure class="card card_hh">
                                                 <div class="card_img">
-                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                                    <img src="./assets/uploads/pic001.png"
                                                         alt="">
                                                     </div>
                                                 <div class="card-body">
@@ -141,7 +137,7 @@
                                         <div class="col-12">
                                             <figure class="card card_hh">
                                                 <div class="card_img">
-                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                                    <img src="./assets/uploads/pic001.png"
                                                         alt="">
                                                     </div>
                                                 <div class="card-body">
@@ -155,7 +151,7 @@
                                         <div class="col-12">
                                             <figure class="card card_hh">
                                                 <div class="card_img">
-                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                                    <img src="./assets/uploads/pic001.png"
                                                         alt="">
                                                     </div>
                                                 <div class="card-body">
@@ -184,10 +180,28 @@
     <footer></footer>
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <script>
+        function setupMobileNav() {
+            if (window.matchMedia('(max-width: 767px)').matches) {
+                $('.navTitle').siblings('ul').hide();
+                //點擊『文章分類』LIST會打開或收合
+                $('.navTitle').off('click').on('click', function () {
+                    $(this).siblings('ul').slideToggle(300);
+                    $(this).toggleClass('rotate180');
+                });
+            } else {
+                // 移除事件，避免影響大螢幕
+                $('.navTitle, .pageNav ul li, .pageNav>ul>li>ul>li').off('click');
+                $('.pageNav ul').show();
+            }
+        }
 
-        $('.navTitle').on('click',function(){
-            $(this).siblings('ul').slideToggle(300);
-        })
+        // 初次執行
+        setupMobileNav();
+
+        // 監聽媒體變化
+        window.matchMedia('(max-width: 767px)').addEventListener('change', setupMobileNav);
+        
+
         $("header").load("./layout/header.html");
         $("footer").load("./layout/footer.html");
     </script>
